--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "hamburger-react": "^2.5.0",
     "next": "12.3.1",
+    "next-videos": "1.5.0",
     "node": "^18.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-player": "^2.11.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
