--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-player": "^2.11.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
